# SARLaC

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  autogen.sh  config.h.in  configure  configure.ac
docs/: Doxyfile.in  Makefile.am
example/: Makefile.am  enumerated_struct_example.C  fit_example.C  fit_simple_bootstrap_example.C  generic_freeze_example.C  simfit_example.C  superjack_example.C
include/: ET.h  Makefile.am  alpha_s.h  common.h  common_defs.h  containers.h  correlationfunction.h  cost_function.h  data_series.h  distribution.h  distribution_ET.h  distribution_IO.h  distribution_iterate.h  distribution_print.h  distribution_vectors.h  effective_mass.h  expression_parse.h  fit.h  fit_wrapper.h  fit_wrapper_freeze.h  fitfunc.h  fitfunc_mapping.h  gen_Makefile.sh  general_container.h  generic_ET.h  gsl_eigensolve.h  gsl_svdinverse.h  hdf5_serialize.h  integrator.h  luscherzeta.h  minimizer.h  numeric_tensors.h  numeric_tensors_ET.h  output_format.h  parser.h  parser_gen.incl  parser_macros.h  physics.h  plot.h  pvalue.h  (+8 more)
include/ET/: generic_ET.h
include/ET/generic_ET/: binop_sv.h  binop_vs.h  binop_vv.h  getelem.h  loop_eval.h  tagging.h  unary.h  value_storage.h
include/common/: common_defs.h
include/containers/: constrained_memory_vector.h  enumerated_struct.h  general_container.h  mem_mapped_file_vector.h  mem_mapped_managed_file_vector.h  parameter_vector.h  single_value_container.h  tagged_value_container.h
include/containers/constrained_memory_vector/: memory_manager.h
include/containers/enumerated_struct/: macros.h
include/containers/general_container/: general_container_i.h
include/containers/mem_mapped_managed_file_vector/: handle_manager.h
include/containers/parameter_vector/: IO.h  class.h
include/data_series/: correlationfunction.h  data_series.h  filtered_data_series.h  sample_series.h  series_utils.h
include/data_series/correlationfunction/: ET.h  class.h  types.h
include/data_series/filtered_data_series/: class.h  filters.h
include/distribution/: block_double_jackknife.h  boot_jackknife.h  bootstrap.h  distribution.h  distribution_hdf5io_basic.h  distribution_hdf5io_conventional.h  distribution_iterate.h  distribution_print.h  distribution_struct_peekpoke.h  double_jackknife.h  jackknife.h  jackknife_C.h  raw_data_distribution.h  sampleAMA_resample.h  superjackknife.h  supermulti.h  utils.h
include/distribution/block_double_jackknife/: ET.h  class.h  hdf5_io.h  iterate.h
include/distribution/boot_jackknife/: ET.h  class.h  hdf5_io.h  iterate.h
include/distribution/bootstrap/: ET.h  class.h  hdf5_io.h  iterate.h  printers.h  qdp_binary_read.h  resample_table.h
include/distribution/distribution/: ET.h  class.h
include/distribution/distribution_hdf5io_conventional/: POD_io.h  compound_io.h  helper.h  io_format.h  type_info.h  utils.h
include/distribution/distribution_print/: manager.h  (+2 more)
include/fit/: GEVP.h  bootstrap_pvalue.h  cost_function.h  fit_wrapper.h  fitfunc.h  param_bounds.h  pvalue.h  simple_fit_wrapper.h
include/integrator/: integrator.h
include/minimizer/: gsl_multidim_minimizer.h  gsl_trs_minimizer.h  minimizer.h  minuit2_minimizer.h  solve_1d.h  solve_multid.h
include/output_format/: cenerr.h  decimal.h
include/parser/: expression_parse.h  parser.h
include/physics/: alpha_s.h  deltaS1_Wilson_coeffs.h  deltaS1_anomalous_dimension.h  delta_0_pheno.h  luscherzeta.h  valord.h
include/plot/: effective_mass.h  plot.h
include/random/: metropolis_hastings.h  random_number.h  rng.h  utils.h
include/serialize/: hdf5_serialize.h  qdp_binary_read.h  xml_serialize.h
include/tensors/: basic_square_matrix.h  dual_number.h  gsl_eigensolve.h  gsl_svdinverse.h  gsl_vector.h  mapped_vector.h  numeric_square_matrix.h  numeric_tensor.h  numeric_vector.h
include/utils/: macros.h  template_wizardry.h  utils.h
main/: Makefile.am  Makefile.in  analyze_ktopipi_gparity.C  analyze_ktopipi_mixdiags_sampleAMA.C  autocorrelation.C  benchmark.C  bin.C  bootstrap_pvalue_noautocorr.C  compare_asymm_symm_ktopipi.C  compare_asymm_symm_pipi.C  compare_simple_correlators.C  compute_pipi_phaseshift.C  dist_compare.C  fit_bk_gparity_AMA.C  fit_example.C  fit_ktopipi_gnd_exc_ktosigma_combined_gparity.C  fit_ktopipi_gnd_exc_ktosigma_combined_gparity_bootstrap.C  fit_ktopipi_gparity.C  fit_ktopipi_gparity_sampleAMA.C  fit_ktopipi_gparity_sampleAMA_sum.C  fit_ktopipi_ktosigma_combined_gparity.C  fit_ktosigma_gparity.C  fit_mpi_gparity_AMA.C  fit_pipi_gnd_exc_sigma_sim_GEVP_gparity.C  fit_pipi_gnd_exc_sigma_sim_GEVP_gparity_bootstrap.C  fit_pipi_gnd_exc_sigma_sim_gparity.C  fit_pipi_gnd_exc_sigma_sim_gparity_bootstrap.C  fit_pipi_gnd_exc_sigma_sim_gparity_pboot.C  fit_pipi_gnd_exc_sim_gparity.C  fit_pipi_gparity.C  fit_pipi_gparity_ratio.C  fit_pipi_gparity_sampleAMA.C  fit_pipi_ktopipi_sim_gparity.C  fit_pipi_multiop_comoving_GEVP_gparity.C  fit_pipi_multiop_comoving_gparity.C  fit_pipi_multiop_comoving_gparity_bootstrap.C  fit_pipi_optimal_bootstrap.C  fit_pipi_sigma_GEVP_gparity.C  fit_pipi_sigma_sim_gparity.C  fit_pipi_sigma_sim_gparity_sampleAMA.C  (+28 more)
main/analyze/: Makefile.am  autocorrelation.C  bin.C  compare_simple_correlators.C  dist_compare.C  integrated_autocorrelation.C  pvalue.C  subdirs.inc  wilson_flow.C
main/fit/: Makefile.am  fit_resampled_results.C  fit_simple.C  fit_simple_AMA.C  fit_simple_bootstrap.C  fit_simple_sampleAMA.C  fit_simultaneous.C
main/misc/: Makefile.am  bootstrap_pvalue.C  bootstrap_pvalue_noautocorr.C  global_fit.C
main/tools/: Makefile.am  gaussian_jackknife.C  hdf5_calc.C  hdf5_combine.C  hdf5_print.C  hdf5_superjackknife_boost.C
test/: Makefile.am  benchmark.C  test_ET.C  test_Luscher_zeta.C  test_block_doublejackknife.C  test_boot_jackknife.C  test_boundedfit.C  test_deltaS1_Wilson_coeffs.C  test_distribution_utils.C  test_expression_parse.C  test_gsl_GEVP.C  test_gsl_min.C  test_gsl_multidim_min.C  test_hdf5.C  test_minuit2_min.C  test_parsers.C  test_simple_fit_wrapper.C  test_simple_fit_wrapper_bootstrap.C  test_supermulti.C  test_template_wizardry.C  test_tensor.C
(+620 files in other folders)
