SUBDIRS =
include_HEADERS = ../config.h
nobase_include_HEADERS = alpha_s.h common_defs.h correlationfunction.h cost_function.h data_series.h distribution_ET.h distribution.h distribution_IO.h distribution_iterate.h distribution_print.h distribution_vectors.h effective_mass.h expression_parse.h fitfunc.h fitfunc_mapping.h fit_wrapper_freeze.h fit_wrapper.h general_container.h generic_ET.h gsl_eigensolve.h gsl_svdinverse.h hdf5_serialize.h luscherzeta.h minimizer.h numeric_tensors_ET.h numeric_tensors.h parser.h parser_macros.h plot.h pvalue.h random.h superjackknife.h template_wizardry.h utils.h xml_serialize.h 