bin_PROGRAMS = fit_example test_ET test_hdf5 test_tensor test_expression_parse simfit_example superjack_example generic_freeze_example fit_mpi_gparity_AMA fit_pipi_gparity fit_ktopipi_gparity fit_simple benchmark hdf5_print hdf5_calc analyze_ktopipi_gparity fit_pipi_ktopipi_sim_gparity fit_pipi_gparity_ratio dist_compare compare_simple_correlators compare_asymm_symm_pipi compare_asymm_symm_ktopipi fit_simple_sampleAMA fit_pipi_gparity_sampleAMA
fit_example_SOURCES = fit_example.C
test_ET_SOURCES = test_ET.C
test_tensor_SOURCES = test_tensor.C
simfit_example_SOURCES = simfit_example.C
superjack_example_SOURCES = superjack_example.C
generic_freeze_example_SOURCES = generic_freeze_example.C
fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
fit_simple_SOURCES = fit_simple.C
benchmark_SOURCES = benchmark.C
test_hdf5_SOURCES = test_hdf5.C
test_expression_parse_SOURCES = test_expression_parse.C
hdf5_print_SOURCES = hdf5_print.C
hdf5_calc_SOURCES = hdf5_calc.C
dist_compare_SOURCES = dist_compare.C
analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
fit_pipi_ktopipi_sim_gparity_SOURCES = fit_pipi_ktopipi_sim_gparity.C
fit_pipi_gparity_ratio_SOURCES = fit_pipi_gparity_ratio.C
compare_simple_correlators_SOURCES = compare_simple_correlators.C
compare_asymm_symm_pipi_SOURCES = compare_asymm_symm_pipi.C
compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
fit_simple_sampleAMA_SOURCES = fit_simple_sampleAMA.C
fit_pipi_gparity_sampleAMA_SOURCES = fit_pipi_gparity_sampleAMA.C

AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
LDADD =../src/libcpsfit.a


