exampledir = $(prefix)/example/@PACKAGE@
testdir = $(prefix)/test/@PACKAGE@
bin_PROGRAMS = analyze_ktopipi_gparity compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators dist_compare fit_bk_gparity_AMA fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_mpi_gparity_AMA fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_resampled_results fit_simple_AMA fit_simple fit_simple_sampleAMA hdf5_calc hdf5_print
analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
compare_asymm_symm_pipi_SOURCES = compare_asymm_symm_pipi.C
compare_simple_correlators_SOURCES = compare_simple_correlators.C
dist_compare_SOURCES = dist_compare.C
fit_bk_gparity_AMA_SOURCES = fit_bk_gparity_AMA.C
fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
fit_ktopipi_gparity_sampleAMA_SOURCES = fit_ktopipi_gparity_sampleAMA.C
fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
fit_pipi_gparity_ratio_SOURCES = fit_pipi_gparity_ratio.C
fit_pipi_gparity_sampleAMA_SOURCES = fit_pipi_gparity_sampleAMA.C
fit_pipi_ktopipi_sim_gparity_SOURCES = fit_pipi_ktopipi_sim_gparity.C
fit_resampled_results_SOURCES = fit_resampled_results.C
fit_simple_AMA_SOURCES = fit_simple_AMA.C
fit_simple_SOURCES = fit_simple.C
fit_simple_sampleAMA_SOURCES = fit_simple_sampleAMA.C
hdf5_calc_SOURCES = hdf5_calc.C
hdf5_print_SOURCES = hdf5_print.C
AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
LDADD =../src/libcpsfit.a
