exampledir = $(prefix)/example
testdir = $(prefix)/test
bin_PROGRAMS = analyze_ktopipi_gparity analyze_ktopipi_mixdiags_sampleAMA compare_asymm_symm_ktopipi compare_asymm_symm_pipi compare_simple_correlators compute_pipi_phaseshift dist_compare fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_resampled_results fit_sigmasigma_gparity fit_simple_AMA fit_simple fit_simple_sampleAMA fit_simultaneous global_fit hdf5_calc hdf5_combine hdf5_print plot_pipi_phaseshift pvalue
analyze_ktopipi_gparity_SOURCES = analyze_ktopipi_gparity.C
analyze_ktopipi_mixdiags_sampleAMA_SOURCES = analyze_ktopipi_mixdiags_sampleAMA.C
compare_asymm_symm_ktopipi_SOURCES = compare_asymm_symm_ktopipi.C
compare_asymm_symm_pipi_SOURCES = compare_asymm_symm_pipi.C
compare_simple_correlators_SOURCES = compare_simple_correlators.C
compute_pipi_phaseshift_SOURCES = compute_pipi_phaseshift.C
dist_compare_SOURCES = dist_compare.C
fit_bk_gparity_AMA_SOURCES = fit_bk_gparity_AMA.C
fit_ktopipi_gnd_exc_ktosigma_combined_gparity_SOURCES = fit_ktopipi_gnd_exc_ktosigma_combined_gparity.C
fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
fit_ktopipi_gparity_sampleAMA_SOURCES = fit_ktopipi_gparity_sampleAMA.C
fit_ktopipi_gparity_sampleAMA_sum_SOURCES = fit_ktopipi_gparity_sampleAMA_sum.C
fit_ktopipi_ktosigma_combined_gparity_SOURCES = fit_ktopipi_ktosigma_combined_gparity.C
fit_ktosigma_gparity_SOURCES = fit_ktosigma_gparity.C
fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
fit_pipi_gnd_exc_sigma_sim_gparity_SOURCES = fit_pipi_gnd_exc_sigma_sim_gparity.C
fit_pipi_gnd_exc_sim_gparity_SOURCES = fit_pipi_gnd_exc_sim_gparity.C
fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
fit_pipi_gparity_ratio_SOURCES = fit_pipi_gparity_ratio.C
fit_pipi_gparity_sampleAMA_SOURCES = fit_pipi_gparity_sampleAMA.C
fit_pipi_ktopipi_sim_gparity_SOURCES = fit_pipi_ktopipi_sim_gparity.C
fit_pipi_sigma_sim_gparity_SOURCES = fit_pipi_sigma_sim_gparity.C
fit_pipi_sigma_sim_gparity_sampleAMA_SOURCES = fit_pipi_sigma_sim_gparity_sampleAMA.C
fit_pipitosigma_gparity_SOURCES = fit_pipitosigma_gparity.C
fit_resampled_results_SOURCES = fit_resampled_results.C
fit_sigmasigma_gparity_SOURCES = fit_sigmasigma_gparity.C
fit_simple_AMA_SOURCES = fit_simple_AMA.C
fit_simple_SOURCES = fit_simple.C
fit_simple_sampleAMA_SOURCES = fit_simple_sampleAMA.C
fit_simultaneous_SOURCES = fit_simultaneous.C
global_fit_SOURCES = global_fit.C
hdf5_calc_SOURCES = hdf5_calc.C
hdf5_combine_SOURCES = hdf5_combine.C
hdf5_print_SOURCES = hdf5_print.C
plot_pipi_phaseshift_SOURCES = plot_pipi_phaseshift.C
pvalue_SOURCES = pvalue.C
AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
LDADD =../src/libcpsfit.a
