exampledir = $(prefix)/example
testdir = $(prefix)/test
test_PROGRAMS = benchmark test_ET test_expression_parse test_hdf5 test_parsers test_tensor
benchmark_SOURCES = benchmark.C
test_ET_SOURCES = test_ET.C
test_expression_parse_SOURCES = test_expression_parse.C
test_hdf5_SOURCES = test_hdf5.C
test_parsers_SOURCES = test_parsers.C
test_tensor_SOURCES = test_tensor.C
AM_CPPFLAGS = -I$(srcdir)/../include -I$(srcdir)/include
LDADD =../src/libcpsfit.a
