exampledir = $(prefix)/example
testdir = $(prefix)/test
EXTRA_PROGRAMS = bootstrap_pvalue_noautocorr global_fit
bootstrap_pvalue_noautocorr_SOURCES = bootstrap_pvalue_noautocorr.C
global_fit_SOURCES = global_fit.C
AM_CPPFLAGS = -I$(top_srcdir)/include -I$(srcdir)/include
LDADD =$(top_builddir)/src/libsarlac.a
