exampledir = $(prefix)/example
testdir = $(prefix)/test
EXTRA_PROGRAMS = fit_bk_gparity_AMA fit_ktopipi_gnd_exc_ktosigma_combined_gparity_bootstrap fit_ktopipi_gnd_exc_ktosigma_combined_gparity fit_ktopipi_gparity fit_ktopipi_gparity_sampleAMA fit_ktopipi_gparity_sampleAMA_sum fit_ktopipi_ktosigma_combined_gparity fit_ktopipi_optimal_bootstrap fit_ktosigma_gparity fit_mpi_gparity_AMA fit_pipi_gnd_exc_sigma_sim_GEVP_gparity_bootstrap fit_pipi_gnd_exc_sigma_sim_GEVP_gparity fit_pipi_gnd_exc_sigma_sim_gparity_bootstrap fit_pipi_gnd_exc_sigma_sim_gparity fit_pipi_gnd_exc_sigma_sim_gparity_pboot fit_pipi_gnd_exc_sim_gparity fit_pipi_gparity fit_pipi_gparity_ratio fit_pipi_gparity_sampleAMA fit_pipi_ktopipi_sim_gparity fit_pipi_multiop_comoving_GEVP_gparity_bootstrap fit_pipi_multiop_comoving_GEVP_gparity fit_pipi_multiop_comoving_gparity_bootstrap fit_pipi_multiop_comoving_gparity fit_pipi_optimal_bootstrap fit_pipi_sigma_GEVP_gparity fit_pipi_sigma_sim_gparity fit_pipi_sigma_sim_gparity_sampleAMA fit_pipitosigma_gparity fit_sigmasigma_gparity
fit_bk_gparity_AMA_SOURCES = fit_bk_gparity_AMA.C
fit_ktopipi_gnd_exc_ktosigma_combined_gparity_bootstrap_SOURCES = fit_ktopipi_gnd_exc_ktosigma_combined_gparity_bootstrap.C
fit_ktopipi_gnd_exc_ktosigma_combined_gparity_SOURCES = fit_ktopipi_gnd_exc_ktosigma_combined_gparity.C
fit_ktopipi_gparity_SOURCES = fit_ktopipi_gparity.C
fit_ktopipi_gparity_sampleAMA_SOURCES = fit_ktopipi_gparity_sampleAMA.C
fit_ktopipi_gparity_sampleAMA_sum_SOURCES = fit_ktopipi_gparity_sampleAMA_sum.C
fit_ktopipi_ktosigma_combined_gparity_SOURCES = fit_ktopipi_ktosigma_combined_gparity.C
fit_ktopipi_optimal_bootstrap_SOURCES = fit_ktopipi_optimal_bootstrap.C
fit_ktosigma_gparity_SOURCES = fit_ktosigma_gparity.C
fit_mpi_gparity_AMA_SOURCES = fit_mpi_gparity_AMA.C
fit_pipi_gnd_exc_sigma_sim_GEVP_gparity_bootstrap_SOURCES = fit_pipi_gnd_exc_sigma_sim_GEVP_gparity_bootstrap.C
fit_pipi_gnd_exc_sigma_sim_GEVP_gparity_SOURCES = fit_pipi_gnd_exc_sigma_sim_GEVP_gparity.C
fit_pipi_gnd_exc_sigma_sim_gparity_bootstrap_SOURCES = fit_pipi_gnd_exc_sigma_sim_gparity_bootstrap.C
fit_pipi_gnd_exc_sigma_sim_gparity_SOURCES = fit_pipi_gnd_exc_sigma_sim_gparity.C
fit_pipi_gnd_exc_sigma_sim_gparity_pboot_SOURCES = fit_pipi_gnd_exc_sigma_sim_gparity_pboot.C
fit_pipi_gnd_exc_sim_gparity_SOURCES = fit_pipi_gnd_exc_sim_gparity.C
fit_pipi_gparity_SOURCES = fit_pipi_gparity.C
fit_pipi_gparity_ratio_SOURCES = fit_pipi_gparity_ratio.C
fit_pipi_gparity_sampleAMA_SOURCES = fit_pipi_gparity_sampleAMA.C
fit_pipi_ktopipi_sim_gparity_SOURCES = fit_pipi_ktopipi_sim_gparity.C
fit_pipi_multiop_comoving_GEVP_gparity_bootstrap_SOURCES = fit_pipi_multiop_comoving_GEVP_gparity_bootstrap.C
fit_pipi_multiop_comoving_GEVP_gparity_SOURCES = fit_pipi_multiop_comoving_GEVP_gparity.C
fit_pipi_multiop_comoving_gparity_bootstrap_SOURCES = fit_pipi_multiop_comoving_gparity_bootstrap.C
fit_pipi_multiop_comoving_gparity_SOURCES = fit_pipi_multiop_comoving_gparity.C
fit_pipi_optimal_bootstrap_SOURCES = fit_pipi_optimal_bootstrap.C
fit_pipi_sigma_GEVP_gparity_SOURCES = fit_pipi_sigma_GEVP_gparity.C
fit_pipi_sigma_sim_gparity_SOURCES = fit_pipi_sigma_sim_gparity.C
fit_pipi_sigma_sim_gparity_sampleAMA_SOURCES = fit_pipi_sigma_sim_gparity_sampleAMA.C
fit_pipitosigma_gparity_SOURCES = fit_pipitosigma_gparity.C
fit_sigmasigma_gparity_SOURCES = fit_sigmasigma_gparity.C
AM_CPPFLAGS = -I$(top_srcdir)/include -I$(srcdir)/include
LDADD =$(top_builddir)/src/libsarlac.a
